dnl Process this file with autoconf to produce a configure script.
AC_INIT(antenna.c)
dnl AC_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)

CASSBEAM_MAJOR=1
CASSBEAM_MINOR=0
CASSBEAM_VERSION="${CASSBEAM_MAJOR}.${CASSBEAM_MINOR}"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_CHECK_PROG(GLIB_CONFIG, glib-config, ok, NONE)

if test "x$GLIB_CONFIG" != xNONE
then
	AC_MSG_CHECKING("for GLIB version")
	glib_version=`glib-config --version`
	glib_flags=`glib-config --cflags`
	glib_libs=`glib-config --libs`
else
	AC_MSG_ERROR("Could not find glib-config in PATH")
fi

AC_MSG_RESULT("$glib_version")

dnl ADD CODE to check for version number


dnl get rid of any duplicates in CFLAGS or LIBS
for flag in ${glib_flags}
do
	if  echo "${CFLAGS}" | grep -v -- "$flag" > /dev/null
	then
		CFLAGS="${CFLAGS} $flag"
	fi
done
for lib in ${glib_libs}
do
	if echo "${LIBS}" | grep -v -- "$lib" > /dev/null
	then
		LIBS="${LIBS} $lib"
	fi
done



dnl Checks for libraries.
AC_CHECK_LIB(m, erf)
XLIBS=${LIBS}
LIBS=""
AC_CHECK_LIB(fftw, fftw_create_plan)
AC_CHECK_LIB(rfftw, rfftw_create_plan)
fftw_libs=${LIBS}

dnl if test "x$LIBS" = x
dnl then
dnl 	AC_MSG_ERROR("Couldn't find fftw")
dnl fi

LIBS="${XLIBS} ${fftw_libs}"

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fftw.h)
AC_CHECK_HEADERS(rfftw.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

if test x${prefix} = "xNONE"
then
	prefix="/usr/local"
fi

echo "LIBS = ${LIBS}"
echo "CFLAGS = ${CFLAGS}"
LDFLAGS="${LDFLAGS} ${LIBS}"

AC_SUBST(CASSBEAM_MAJOR)
AC_SUBST(CASSBEAM_MINOR)
AC_SUBST(CASSBEAM_VERSION)
AC_SUBST(LDFLAGS)

AC_OUTPUT(Makefile)

echo
echo "Type make to build cassbeam"
echo
